# python-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  context7.json  openapi.json  pyproject.toml
.github/workflows/: auto-publish.yml  publish.yml
scripts/: generate.sh
src/fiberai/: __init__.py
src/fiberai/models/: __init__.py  add_companies_to_exclusion_list_body.py  add_companies_to_exclusion_list_body_companies_item.py  add_companies_to_exclusion_list_response_200.py  add_companies_to_exclusion_list_response_200_charge_info_type_0.py  add_companies_to_exclusion_list_response_200_charge_info_type_0_low_credit_alert_type_0.py  add_companies_to_exclusion_list_response_200_charge_info_type_0_method.py  add_companies_to_exclusion_list_response_200_charge_info_type_1.py  add_companies_to_exclusion_list_response_200_charge_info_type_1_low_credit_alert_type_0.py  add_companies_to_exclusion_list_response_200_charge_info_type_1_method.py  add_companies_to_exclusion_list_response_200_charge_info_type_2.py  add_companies_to_exclusion_list_response_200_charge_info_type_2_low_credit_alert_type_0.py  add_companies_to_exclusion_list_response_200_charge_info_type_2_method.py  add_companies_to_exclusion_list_response_200_charge_info_type_3.py  add_companies_to_exclusion_list_response_200_charge_info_type_3_low_credit_alert_type_0.py  add_companies_to_exclusion_list_response_200_charge_info_type_3_method.py  add_companies_to_exclusion_list_response_200_output.py  add_companies_to_exclusion_list_response_200_warnings_type_0_item.py  add_prospects_to_exclusion_list_body.py  (+14401 more)
(+102 files in other folders)
