[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiberai"
version = "0.0.3"
description = "Official Python SDK for Fiber AI API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Fiber AI", email = "adi@fiber.ai" },
]
keywords = [
    "fiberai",
    "fiber",
    "sdk",
    "api",
    "python",
    "sales",
    "enrichment",
    "prospecting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.20.0,<1.0.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0,<3.0.0",
]

[project.urls]
Homepage = "https://fiber.ai"
Documentation = "https://docs.fiber.ai"
Repository = "https://github.com/fiber-ai/python-sdk"
Issues = "https://github.com/fiber-ai/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fiberai"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
